--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,9 @@ services:
           - mobileapi
 networks:
   mobileapi:
-    ipv4_address: 10.5.0.6
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 10.5.0.0/16
+         gateway: 10.5.0.1
+    
